[package]
name = "pallet-offchain_computing-infra-primitives"
version = "0.0.1-dev"
description = "A crate that hosts a common definitions that are relevant for the pallet-offchain_computing_workers."
authors.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
]
